# polars-styler

./: .gitignore  Cargo.toml  README.md  checks.sh  main.py  pyproject.toml
.github/workflows/: python-package.yml  rust.yml
examples/notebooks/: Example1.html  Example1.ipynb  README.md  pyproject.toml
examples/rocket_server/: Cargo.toml
examples/rocket_server/src/: main.rs
examples/rocket_server/templates/: index.html.tera
polars_styler/: const.py  expression.py  styler.py  table_attributes.py
polars_styler/examples/: t_000.py  t_001.py  t_002.py
py_tests/: test_examples.py  test_expression.py  test_importing.py  test_styler.py
src/: colors.rs  lib.rs  main.rs  renderer.rs  styler.rs
templates/: template.html
