[project]
name = "polars_styler"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.ruff]
exclude = [
    "*.ipynb",
]
