[project]
name = "polars_styler"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.10.0",
    "pyarrow>=10.0.0",
    "typing-extensions>=4.12.2 ; python_full_version < '3.11'",
]

[dependency-groups]
dev = [
    "jinja2>=3.1.5",
    "mypy>=1.15.0",
    "parameterized>=0.9.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]

[tool.ruff]
exclude = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "ANN", "A", "I", "C4", "SIM", "TC"]

[tool.ruff.lint.per-file-ignores]
"py_tests/**/test_*.py" = ["ANN"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
