[package]
name = "rocket_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3" }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
polars_styler = { path = "../../" }
polars = "0.30.0"
